--- a/project.json
+++ b/project.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "UiPath.Excel.Activities": "[3.0.1]",
     "UiPath.System.Activities": "[25.4.2]",
+    "UiPath.Testing.Activities": "[24.10.1]",
     "UiPath.UIAutomation.Activities": "[25.2.1-preview]"
   },
   "webServices": [],
