--- a/project.json
+++ b/project.json
@@ -5,6 +5,7 @@
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[3.0.1]",
+    "UiPath.MicrosoftOffice365.Activities": "[3.1.10-preview]",
     "UiPath.System.Activities": "[25.4.2]",
     "UiPath.Testing.Activities": "[24.10.1]",
     "UiPath.UIAutomation.Activities": "[25.2.1-preview]"
